--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@ My research interest lies in Partial Differential Equations, Kähler Geometry, M
 <h2>Publications and preprints</h2>
 
 <p>
+    • S. Zhou, On the L² volume of Bergman spaces, <a href="https://arxiv.org/pdf/2404.12840.pdf">arXiv:2404.12840</a>, 2024.
+<p>
+
+<p>
     • S. Zhou, Examples of Ricci limit spaces with infinite holes, <a href="https://arxiv.org/pdf/2404.00619.pdf">arXiv:2404.00619</a>, 2024.
 <p>
     
